
CMAKE_MINIMUM_REQUIRED (VERSION 2.8)
PROJECT (fml)


INCLUDE_DIRECTORIES (
  ${PROJECT_SOURCE_DIR}/include
  /usr/local/include
  /usr/include
)
SET (EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/build/bin)
SET (CMAKE_CXX_STANDARD 17)

SET (CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS} -O0 -Wall -g -std=c++17")
SET (CMAKE_CXX_FLAGS_RELEASE "$ENV{CXXFLAGS} -O3 -Wall -std=c++17")

ADD_SUBDIRECTORY (test)

