
CMAKE_MINIMUM_REQUIRED (VERSION 2.8)
PROJECT (fml)


INCLUDE_DIRECTORIES (
  ${PROJECT_SOURCE_DIR}/include
  /usr/local/include
  /usr/include
)
MESSAGE ("CMAKE_BUILD_TYPE = ${CMAKE_BUILD_TYPE}")
IF (CMAKE_BUILD_TYPE MATCHES "DEBUG")
    MESSAGE ("Debug build.")
    SET (EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/debug/bin)
ELSEIF (CMAKE_BUILD_TYPE MATCHES "RELEASE")
    MESSAGE ("Release build.")
    SET (EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/build/bin)
ELSE ()
    MESSAGE ("Some other build type.")
    SET (EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/build/bin)
ENDIF ()
SET (CMAKE_CXX_STANDARD 17)

SET (CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS} -O0 -Wall -g -std=c++17")
SET (CMAKE_CXX_FLAGS_RELEASE "$ENV{CXXFLAGS} -O3 -Wall -std=c++17")
SET (CMAKE_EXPORT_COMPILE_COMMANDS 1)

ADD_SUBDIRECTORY (test)

